--- a/lib/style.css
+++ b/lib/style.css
@@ -3,7 +3,7 @@
 /*********/
 @font-face {
 	font-family: "Geometria";
-	src: url("./fonts/Geometria.ttf");
+	src: url("//maps.greenpeace.org/fire_dashboard/dist/lib/fonts/Geometria.ttf");
 }
 
 
@@ -95,6 +95,74 @@ body {
 	color: #ffbe41;
 	text-decoration: underline;
 }
+.logo_gmh {
+	width: 150px;
+	height: 130px;
+	background: url(./images/logo_gmh.svg) no-repeat center;
+	background-size: 150px;
+}
+
+
+/******************/
+/* feedback modal */
+/******************/
+#global_feedback_wrapper {
+	display: none;
+	position: fixed;
+	z-index: 2080;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgba(0,0,0,0.7);
+}
+#global_feedback {
+	position: relative;
+	background-color: #353535;
+	border: 1px solid #888;
+	width: 80%;
+	margin: 2% auto;
+}
+#global_feedback_close {
+	cursor: pointer;
+	color: white;
+	opacity: inherit;
+	font-size: 3em;
+	text-shadow: none;
+	position: absolute;
+	margin-top: 0px;
+	margin-right: 15px;
+	right: 0;
+	top: 0;
+	z-index: 1005;
+}
+#feedback_form {
+	transition: all 1s;
+	display: block;
+	transition: all 1s;
+	width: 100%;
+	z-index: 1004;
+	text-align: center;
+	padding: 1em;
+	position: relative;
+	color: white;
+}
+.fs-title {
+	padding: 0 1em;
+}
+.feedback_inputs {
+	display: flex;
+	flex-direction: column;
+}
+.feedback_inputs input {
+	margin-bottom: .8em;
+	line-height: 30px;
+}
+#feedback_submit {
+	background-color: white;
+}
+
 
 
 /********************/
@@ -114,22 +182,18 @@ body {
 	padding: 0 .5em;
 	margin: 0;
 }
-.logo_gmh {
-	width: 100px;
-	height: 80px;
-	background: url(./images/logo_gmh.svg) no-repeat center;
-	background-size: 100px;
+#header_logo {
+	position: absolute;
+	right: calc(22%);
+	top: 0;
+	transform: translate(100%, 0);
 }
-.logo_greenpeace {
-	width: 140px;
-	height: 30px;
-	background: url(./images/logo_gp.svg) no-repeat center;
-	background-size: 140px;
-	margin: 0px 10px;
+.header_image {
+	width: 150px;
 }
 .header_title_wrapper {
 	display: flex;
-	flex: auto;
+	/*flex: auto;*/
 	align-items: center;
 }
 .map_title {
@@ -147,7 +211,7 @@ body {
 	text-align: center;
 	width: 34px;
 	height: 34px;
-	margin-left: 10px;
+	margin-left: 1em;
 }
 
 
@@ -185,6 +249,7 @@ body {
 	margin-bottom: .5em;
 	display: inline-block;
 }
+
 
 /***************/
 /* quick stats */
@@ -283,29 +348,17 @@ span.circle {
 	outline: none;
 	background-color: rgb(38, 38, 38);
 }
-#map_notification {
-	display: flex;
-	background-color: rgb(9 9 9 / 92%);
-	font-size: 12px;
-	padding: 10px;
-	padding-right: 40px;
-	padding-bottom: 0;
-	position: absolute;
-	width: 100%;
-	z-index: 1010;
+
+#map_datepicker_block {
+	display: none;
 }
-.map_notification_text a {
+#map_datepicker {
+	background-color: rgba(51, 51, 51, 0.9);
 	color: #ffbe41;
-}
-#map_notification_close {
-	color: #aaa;
-	opacity: inherit;
-	font-size: 2.5em;
-	margin: 2px 12px;
-	text-shadow: none;
-	position: absolute;
-	right: 0;
-	top: 5px;
+	border: 1px solid #ffbe41;
+	border-radius: 5px;
+	padding: 2px 10px;
+	margin-bottom: .4em;
 }
 
 #country_input {
@@ -364,8 +417,6 @@ span.circle {
 	border-color: #ffbe41 transparent transparent transparent;
 }
 
-
-
 #chart_line svg text {
 	fill: white;
 }
@@ -391,7 +442,7 @@ span.circle {
 .country_placeholder_background {
 	width: 100%;
 	height: 100%;
-	background-image: url('./images/chart_placeholder.png');
+	background-image: url('//maps.greenpeace.org/fire_dashboard/dist/lib/images/chart_placeholder.png');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -430,15 +481,19 @@ span.circle {
 	cursor: pointer;
 }
 .leaflet-settings {
-	background: url(./images/layers.svg) no-repeat white;
+	background: url(//maps.greenpeace.org/fire_dashboard/dist/lib/images/layers.svg) no-repeat white;
 	background-size: 22px;
 }
+.leaflet-feedback {
+	background: url(//maps.greenpeace.org/fire_dashboard/dist/lib/images/feedback.svg) no-repeat white;
+	background-size: 28px;
+}
 .leaflet-size-control {
-	background: url(./images/bigMap.svg) no-repeat white;
+	background: url(//maps.greenpeace.org/fire_dashboard/dist/lib/images/bigMap.svg) no-repeat white;
 	background-size: 50px;
 }
 .leaflet-size-control-big {
-	background: url(./images/smallMap.svg) no-repeat white;
+	background: url(//maps.greenpeace.org/fire_dashboard/dist/lib/images/smallMap.svg) no-repeat white;
 	background-size: 50px;
 }
 
@@ -573,7 +628,7 @@ span.circle {
 	align-items: center;
 	justify-content: space-between;
 	width: 100%;
-	min-height: 1.8rem;
+	min-height: 1.5rem;
 	padding-top: 2px;
 }
 .layers_el_density {
@@ -625,6 +680,49 @@ span.circle {
 	text-decoration-style: dotted;
 	padding-bottom: 0em;
 	margin-right: 1em;
+}
+
+/* datetime pickers styling */
+/* main block */
+.pika-single {
+	background-color: #343434;
+	color: #ffbe41;
+	border: 1px solid #ffbe41;
+	border-radius: 5px;
+	margin-top: .2em;
+}
+/* month/year */
+.pika-label {
+	background-color: transparent;
+}
+/* prev/next buttons */
+.pika-prev, .pika-next {
+	background-color: #ffbe41;
+	opacity: 0.8;
+}
+/* days of the week */
+.pika-table abbr {
+	color: white;
+}
+/* calendar days */
+.pika-button {
+	background: #343434;
+	color: white;
+}
+/* selected day*/
+.is-selected .pika-button {
+	color: #000;
+	background: #ffbe41;
+	box-shadow: inset 0 1px 3px #ffbe41;
+}
+/* today */
+.is-today .pika-button {
+	color: #ffbe41;
+}
+/* disabled days */
+.is-disabled .pika-button {
+	background-color: transparent;
+	color: white;
 }
 
 
@@ -853,18 +951,13 @@ span.circle {
 	.map_title {
 		font-size: 30px;
 	}
-	.logo_gmh {
-		width: 60px;
-		height: 60px;
-		background-size: 60px;
+	#header_logo {
+		right: 1em;
+		transform: none;
 	}
-	.logo_greenpeace {
-		width: 20px;
-		height: 30px;
-		background: url(./images/logo_gp_G.svg) no-repeat center;
-		background-size: 20px;
-		margin-right: 0;
-		margin-left: .4em;
+	.header_image {
+		width: 110px;
+		margin-top: -4px;
 	}
 	/* map related */
 	#map_info_modal {
@@ -879,5 +972,11 @@ span.circle {
 @media only screen and (max-width: 580px) {
 	.map_title {
 		font-size: 20px;
+	}
+}
+
+@media only screen and (max-width: 450px) {
+	.header_wrapper {
+		margin-top: 40px;
 	}
 }
