--- a/lib/style.css
+++ b/lib/style.css
@@ -53,6 +53,20 @@ body {
 }
 
 
+/******************************/
+/* language switcher dropdown */
+/******************************/
+#header_lang_block {
+	margin-left: 1em;
+	width: 185px;
+}
+/* select2 custom styles */
+#select2-language_input-container {
+	color: #ffbe41;
+	border-radius: 5px;
+	font-size: 20px;
+	margin-bottom: 0;
+}
 
 /*********************/
 /* global info modal */
@@ -389,12 +403,15 @@ span.circle {
 	border: 1px solid #ffbe41;
 	border-radius: 5px;
 	background-color: #353535;
-	margin-bottom: 10px;
+}
+.select2-container--default .select2-results__option[aria-selected=true] {
+	background-color: #607d8b;
 }
 #select2-country_input-container, #select2-divisions_input-container {
 	color: #ffbe41;
 	border-radius: 5px;
 	font-size: 20px;
+	margin-bottom: 10px;
 }
 .select2-container {
 	max-width: 250px;
