added screenshot button

--- a/lib/style.css
+++ b/lib/style.css
@@ -339,6 +339,84 @@ span.circle {
 }
 
 
+/********************************************/
+/* logos when the screenshot is being taken */
+/********************************************/
+#map_logos {
+	display: none;
+	position: absolute;
+	top: 0;
+	right: 20px;
+	z-index: 1040;
+	background-color: #66CC00;
+	padding: 4px 6px;
+}
+.map_logo_gp {
+	width: 120px;
+}
+
+
+/***************/
+/* map spinner */
+/***************/
+#map_spinner {
+	display: none;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: 1040;
+	background-color: #00000073;
+}
+.lds-ellipsis {
+	display: inline-block;
+	position: relative;
+	width: 80px;
+	height: 80px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+.lds-ellipsis div {
+	position: absolute;
+	top: 33px;
+	width: 13px;
+	height: 13px;
+	border-radius: 50%;
+	background: #fff;
+	animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+.lds-ellipsis div:nth-child(1) {
+	left: 8px;
+	animation: lds-ellipsis1 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(2) {
+	left: 8px;
+	animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(3) {
+	left: 32px;
+	animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(4) {
+	left: 56px;
+	animation: lds-ellipsis3 0.6s infinite;
+}
+@keyframes lds-ellipsis1 {
+	0% { transform: scale(0); }
+	100% { transform: scale(1); }
+}
+@keyframes lds-ellipsis3 {
+	0% { transform: scale(1); }
+	100% { transform: scale(0); }
+}
+@keyframes lds-ellipsis2 {
+	0% { transform: translate(0, 0); }
+	100% { transform: translate(24px, 0); }
+}
+
+
 /***************/
 /* map related */
 /***************/
@@ -507,6 +585,10 @@ span.circle {
 .leaflet-feedback {
 	background: url(//maps.greenpeace.org/fire_dashboard/dist/lib/images/feedback.svg) no-repeat white;
 	background-size: 28px;
+}
+.leaflet-screenshot {
+	background: url(//maps.greenpeace.org/fire_dashboard/dist/lib/images/camera.svg) no-repeat white;
+	background-size: 20px;
 }
 .leaflet-size-control {
 	background: url(//maps.greenpeace.org/fire_dashboard/dist/lib/images/bigMap.svg) no-repeat white;
