--- a/lib/style.css
+++ b/lib/style.css
@@ -346,7 +346,7 @@ span.circle {
 	display: none;
 	position: absolute;
 	top: 0;
-	right: 20px;
+	left: 20px;
 	z-index: 1040;
 	background-color: #66CC00;
 	padding: 4px 6px;
